[tool.poetry]
name = "repl-nix-abdihoden"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_abdihoden"}]

[tool.poetry.dependencies]
python = "^3.10"
schettino = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
